// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:datetimeRange with timeFormat 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          时间范围
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateRangeControl cxd-Form-control"
                    >
                      <div
                        class="cxd-DateRangePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DateRangePicker-input"
                          placeholder="开始时间"
                          type="text"
                          value="03:13:23"
                        />
                        <span
                          class="cxd-DateRangePicker-input-separator"
                        >
                          <span
                            class="cxd-DateRangePicker-input-separator-line"
                          />
                        </span>
                        <input
                          autocomplete="off"
                          class="cxd-DateRangePicker-input"
                          placeholder="结束时间"
                          type="text"
                          value="14:24:34"
                        />
                        <div
                          class="cxd-DateRangePicker-activeCursor"
                          style="position: absolute; left: 0px; width: 0px;"
                        />
                        <a
                          class="cxd-DateRangePicker-clear"
                        >
                          <icon-mock
                            classname="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="cxd-DateRangePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-clock"
                            icon="clock"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:timeRange with default 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Panel cxd-Panel--default cxd-Panel--form"
            style="position: relative;"
          >
            <div
              class="cxd-Panel-heading"
            >
              <h3
                class="cxd-Panel-title"
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="cxd-Panel-body"
            >
              <form
                class="cxd-Form cxd-Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="cxd-Form-item cxd-Form-item--horizontal"
                  data-role="form-item"
                >
                  <label
                    class="cxd-Form-label cxd-Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          时间范围
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="cxd-Form-value"
                  >
                    <div
                      class="cxd-DateRangeControl cxd-Form-control"
                    >
                      <div
                        class="cxd-DateRangePicker has-popover"
                        style="position: relative;"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="cxd-DateRangePicker-input"
                          placeholder="开始时间"
                          type="text"
                          value="03:05"
                        />
                        <span
                          class="cxd-DateRangePicker-input-separator"
                        >
                          <span
                            class="cxd-DateRangePicker-input-separator-line"
                          />
                        </span>
                        <input
                          autocomplete="off"
                          class="cxd-DateRangePicker-input"
                          placeholder="结束时间"
                          type="text"
                          value="07:08"
                        />
                        <div
                          class="cxd-DateRangePicker-activeCursor"
                          style="position: absolute; left: 0px; width: 0px;"
                        />
                        <a
                          class="cxd-DateRangePicker-clear"
                        >
                          <icon-mock
                            classname="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="cxd-DateRangePicker-toggler"
                        >
                          <icon-mock
                            classname="icon icon-clock"
                            icon="clock"
                          />
                        </a>
                        <div
                          class="cxd-PopOver cxd-DateRangePicker-popover cxd-PopOver--leftBottomLeftTop"
                          style="display: block; left: 0px; top: 0px; position: relative;"
                          theme="cxd"
                        >
                          <div
                            class="cxd-DateRangePicker-wrap"
                          >
                            <div
                              class="cxd-DateRangePicker-picker-wrap"
                            >
                              <div
                                class="rdt rdtStatic rdtOpen cxd-DateRangePicker-end rdtTimeWithoutD"
                              >
                                <div
                                  class="rdtPicker rdtPickerTimeWithoutD"
                                >
                                  <div
                                    class="cxd-TimeRangeHeaderWrapper"
                                  >
                                    结束时间
                                  </div>
                                  <div
                                    class="cxd-TimeContentWrapper"
                                  >
                                    <div
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-labelledby="downshift-2-label"
                                      class="cxd-CalendarInputWrapper"
                                      role="combobox"
                                    >
                                      <div
                                        class="cxd-CalendarInput-sugs cxd-CalendarInput-sugsHours"
                                        id="1667746799350-0-input"
                                      >
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          00
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          01
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          02
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          03
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          04
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          05
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          06
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem is-highlight"
                                        >
                                          07
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          08
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          09
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          10
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          11
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          12
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          13
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          14
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          15
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          16
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          17
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          18
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          19
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          20
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          21
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          22
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          23
                                        </div>
                                      </div>
                                    </div>
                                    <span />
                                    <div
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-labelledby="downshift-3-label"
                                      class="cxd-CalendarInputWrapper"
                                      role="combobox"
                                    >
                                      <div
                                        class="cxd-CalendarInput-sugs cxd-CalendarInput-sugsTimes"
                                        id="1667746799350-1-input"
                                      >
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          00
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          01
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          02
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          03
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          04
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          05
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          06
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          07
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem is-highlight"
                                        >
                                          08
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          09
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          10
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          11
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          12
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          13
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          14
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          15
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          16
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          17
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          18
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          19
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          20
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          21
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          22
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          23
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          24
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          25
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          26
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          27
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          28
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          29
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          30
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          31
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          32
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          33
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          34
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          35
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          36
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          37
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          38
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          39
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          40
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          41
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          42
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          43
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          44
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          45
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          46
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          47
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          48
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          49
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          50
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          51
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          52
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          53
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          54
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          55
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          56
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          57
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          58
                                        </div>
                                        <div
                                          class="cxd-CalendarInput-sugsItem"
                                        >
                                          59
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="cxd-DateRangePicker-actions"
                            >
                              <a
                                class="cxd-Button cxd-Button--default cxd-Button--size-sm"
                              >
                                取消
                              </a>
                              <a
                                class="cxd-Button cxd-Button--primary cxd-Button--size-sm m-l-sm"
                              >
                                确认
                              </a>
                            </div>
                          </div>
                          <div
                            class="resize-sensor"
                            style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                          >
                            
  
                            <div
                              class="resize-sensor-expand"
                              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                            >
                              
    
                              <div
                                style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                              />
                              
  
                            </div>
                            
  
                            <div
                              class="resize-sensor-shrink"
                              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                            >
                              
    
                              <div
                                style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                              />
                              
  
                            </div>
                            
  
                            <div
                              class="resize-sensor-appear"
                              style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                            />
                          </div>
                        </div>
                        <div
                          class="resize-sensor"
                          style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                        >
                          
  
                          <div
                            class="resize-sensor-expand"
                            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                          >
                            
    
                            <div
                              style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                            />
                            
  
                          </div>
                          
  
                          <div
                            class="resize-sensor-shrink"
                            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                          >
                            
    
                            <div
                              style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                            />
                            
  
                          </div>
                          
  
                          <div
                            class="resize-sensor-appear"
                            style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="cxd-Panel-footerWrap"
            >
              <div
                class="cxd-Panel-btnToolbar cxd-Panel-footer"
              >
                <button
                  class="cxd-Button cxd-Button--primary cxd-Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
            <div
              class="resize-sensor"
              style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
            >
              
  
              <div
                class="resize-sensor-expand"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-shrink"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
              >
                
    
                <div
                  style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                />
                
  
              </div>
              
  
              <div
                class="resize-sensor-appear"
                style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
